home.css: fix vertical mis-align

--- a/css/home.css
+++ b/css/home.css
@@ -28,7 +28,7 @@
 }
 
 .right p {
-	margin-left: 72px;
+	margin: auto auto auto 72px;
 	color: black;
 	font-size: 36pt;
 	line-height: 36pt;
